# babrat-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
ci/: macos.sh
cmake/: absl.cmake  babrat-config.cmake.in  boost.cmake  utils.cmake
examples/: CMakeLists.txt  main.cpp
include/babrat/: babrat.hpp
include/babrat/execution/: CMakeLists.txt  ddl_command.hpp  ddl_command_factories.h  ddl_command_result.hpp  ddl_executor.hpp
include/babrat/execution/command/: command.h  command_context.h  command_factory.h  command_processor.h  database_context.h  sql_command.h
include/babrat/execution/command/ddl/: create_database.hpp  create_schema.hpp  create_statement.hpp  create_table.hpp
include/babrat/execution/command/ddl/drop/: drop_database_command.h  drop_statement_command.h
include/babrat/execution/command/dml/: insert_command.h  select_command.h
include/babrat/execution/common/: catalog_utils.h  condition_evaluator.h
include/babrat/execution/exec/: ddl_default_executor.h
include/babrat/execution/factories/: create_table_factory.hpp  ddl_command_factory.hpp
include/babrat/execution/query_attribute/: attribute_ctx.h  attribute_factory.h  attribute_pipeline_builder.h
include/babrat/execution/query_attribute/handler/: attribute_handler.h
src/: CMakeLists.txt
src/api/: CMakeLists.txt
src/api/message-bus-consumer/: CMakeLists.txt
src/api/message-bus-consumer/kafka-consumer/: CMakeLists.txt  kafka-consumer.cpp
src/api/message-bus-producer/kafka-producer/: CMakeLists.txt  kafka-producer.cpp
src/common/: error.cpp  exception.cpp  not_implemented_error.cpp  stream_error.cpp  string_empty_error.cpp  throw_base.cpp
src/core/: CMakeLists.txt
src/core/buffer/: IStorageBuffer.h
src/core/catalog/: CMakeLists.txt
src/core/catalog/include/: auth_table.h  catalog.h  catalog_default.h  collection_table.h  database_table.h  field_table.h  role_table.h  schema_table.h  system_table.h  type_table.h
src/core/catalog/registry_types/: create_type.h  default_types.h
src/core/commands/: CMakeLists.txt
src/core/commands/include/: command.h  command_context.h  command_factory.h  command_invoker.h  command_processor_builder.h  sql_command_factory.h
src/core/commands/include/factories/ddl/: create_table_factory.h  ddl_command_factories.h  ddl_command_factory.h  drop_statement_factory.h
src/core/commands/include/query_attribute/: attribute_pipeline_builder.h
src/core/commands/include/query_attribute/handler/: attribute_handler.h  where_attribute.h
src/core/commands/include/sql_commands/: database_context.h  sql_command.h
src/core/commands/include/sql_commands/ddl/: create_database_command.h  create_namespace_command.h  create_role_command.h  create_table_command.h  ddl_command.h  ddl_command_result.h  ddl_default_executor.h  ddl_executor.h  drop_namespace_command.h  drop_statement_command.h  drop_table_command.h
src/core/commands/include/sql_commands/dml/: delete_command.h  select_command.h  update_command.h
src/core/common/: CMakeLists.txt  babrat_exception.cpp  babrat_exception.h  babrat_id.cpp  babrat_id.h  column.h  column_type.h  column_visitor.h  convert_column.h  convert_timestamp.h  db_server_traits.h  demangle.h  encodable.h  exception_util.cpp  exception_util.h  not_implemented.cpp  not_implemented.h  serializable.h  string_accumulator.h
src/core/common/exceptions/: babrat_container_error.cpp  babrat_container_error.h  babrat_fatal_error.cpp  babrat_fatal_error.h  babrat_storage_error.cpp  babrat_storage_error.h  string_empty_error.cpp  string_empty_error.h
src/core/container/: CMakeLists.txt
src/core/container/include/: associative_container.h
src/core/container/search_tree/: CMakeLists.txt
src/core/container/search_tree/include/: search_tree.h
src/core/container/search_tree/indexing_tree/: CMakeLists.txt
src/core/container/search_tree/indexing_tree/b_tree/: CMakeLists.txt
src/core/container/search_tree/indexing_tree/b_tree/include/: b_tree.h
src/core/container/search_tree/indexing_tree/red_black_tree/: CMakeLists.txt
src/core/container/search_tree/indexing_tree/red_black_tree/include/: red_black_tree.h
src/core/main/: CMakeLists.txt
src/core/main/include/: db_babrat_controller.cpp  db_babrat_controller.h  db_controller.h
src/core/statements/: CMakeLists.txt  sql_statement.h
src/core/statements/common/: column_definition.h  column_definition_collection.h  condition_model.h
src/core/statements/ddl/: create_database.h  create_schema.h  create_statement.h  create_table.h  ddl_statement.h  drop_database.h  drop_schema.h  drop_statement.h  drop_table.h
src/core/statements/dml/: delete_query_model.h  insert_query_model.h  select_query_model.h
src/core/storage/: CMakeLists.txt
src/core/storage/include/: collection.h  database_storage.h  database_wal_manager.h  db_enums.h  db_options.h  db_util.h  in_memory_storage.h  persist_storage.h  pool.h  schema.h  storage.h  storage_policy.h  tree_factory.h  wal_formatter.h  wal_mask.cpp  wal_mask.h
src/core/types/column_types/: boolean.h  char.h  dynamic_array.h  dynamic_string.h  int32.h
src/core/wal/: CMakeLists.txt
src/core/wal/include/: wal.h  wal_default.h  wal_exceptions.h  wal_format.h  wal_struct.h
src/core/wal/src/: wal_default.cpp  wal_format.cpp
src/core/wal/tests/: CMakeLists.txt  tests.cc
src/execution/: ddl_command_result.cpp  ddl_executor.cpp
src/logger/: logger.cpp  logger_manager.cpp
src/main/: client_context.cpp  connection.cpp  connection_manager.cpp  database.cpp  database_manager.cpp  write_ahead_log.cpp
src/storage/: db_wal_serializer.cpp
src/tests/: CMakeLists.txt
src/tests/integration/: CMakeLists.txt  catalog_tests.cc  fast_db_server_tests.cc
src/tests/unit/: CMakeLists.txt
src/tests/unit/commands/: commands.cc  db_types.h  sdasdas.h  testing_type.h
src/tests/unit/common/: statements.cc
src/tests/unit/container/indexing_tree/: indexing_containers.cc
src/tests/unit/db_storage/: db_storage.cc
src/tests/unit/wal/: wal.cc
src/wal/: wal.cpp  (+2 more)
tests/: CMakeLists.txt
tests/container/: search_trees.cpp
(+170 files in other folders)
